--- a/views/partials/navegacion.ejs
+++ b/views/partials/navegacion.ejs
@@ -3,7 +3,7 @@
         <div class="navbar-nav">
             <a href="/" class="nav-link text-light">Index</a>
             <a href="/practica1" class="nav-link text-light">Practica 01</a>
-            <a href="/practica2" class="nav-link text-light">Practica 02</a>
+            <a href="/cotizacion" class="nav-link text-light">Practica 02</a>
             <a href="/practica3" class="nav-link text-light">Practica 03</a>
         </div>
     </div>
