productos.json add

--- a/views/partials/navegacion.ejs
+++ b/views/partials/navegacion.ejs
@@ -5,6 +5,7 @@
             <a href="/practica1" class="nav-link text-light">Practica 01</a>
             <a href="/cotizacion" class="nav-link text-light">Practica 02</a>
             <a href="/nomina" class="nav-link text-light">Practica 03</a>
+            <a href="/preexamen" class="nav-link text-light">Practica 03</a>
         </div>
     </div>
 </nav>
