--- a/views/partials/navegacion.ejs
+++ b/views/partials/navegacion.ejs
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="d-flex justify-content-center w-100">
-        <div class="navbar-nav">
-            <a href="/" class="nav-link text-light">Index</a>
-            <a href="/practica1" class="nav-link text-light">Practica 01</a>
-            <a href="/cotizacion" class="nav-link text-light">Practica 02</a>
-            <a href="/nomina" class="nav-link text-light">Practica 03</a>
-            <a href="/preexamen" class="nav-link text-light">Practica 03</a>
-        </div>
+  <div class="d-flex justify-content-center w-100">
+    <div class="navbar-nav">
+      <a href="/" class="nav-link text-light">Index</a>
+      <a href="/practica1" class="nav-link text-light">Practica 01</a>
+      <a href="/cotizacion" class="nav-link text-light">Practica 02</a>
+      <a href="/nomina" class="nav-link text-light">Practica 03</a>
+      <a href="/preexamen" class="nav-link text-light">preexamen</a>
     </div>
+  </div>
 </nav>
