--- a/views/partials/navegacion.ejs
+++ b/views/partials/navegacion.ejs
@@ -6,6 +6,7 @@
       <a href="/cotizacion" class="nav-link text-light">Practica 02</a>
       <a href="/nomina" class="nav-link text-light">Practica 03</a>
       <a href="/preexamen" class="nav-link text-light">preexamen</a>
+      <a href="/examen" class="nav-link text-light">Examen</a>
     </div>
   </div>
 </nav>
